--- a/14-reference-copying/index-START.html
+++ b/14-reference-copying/index-START.html
@@ -70,12 +70,22 @@
 
       // how do we take a copy instead?
       const cap2 = Object.assign({}, person, { number: 99 });
-      cap2.number = 80;
+      cap2.number = 80; //doesnt change the original array
       console.log(cap2);
 
       // We will hopefully soon see the object ...spread
+      const cap3 = { ...person };
 
       // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+
+      const wes = {
+        name: "Wes",
+        age: 100,
+        social: {
+          twitter: "@wesbos",
+          facebook: "wesbos.developer"
+        }
+      };
     </script>
   </body>
 </html>
